<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.visionstech.storkmart.Fragment.LoginFragment">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"

        android:id="@+id/registerEditTextContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/registerHead"
        android:background="#0B8ACD"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutLoginPhone"
            style="@style/TextInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="30dp"

            android:layout_marginRight="30dp"

            android:layout_marginStart="30dp"
            android:layout_toRightOf="@+id/phoneImage">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtLoginPhone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                android:backgroundTint="@android:color/white"
                android:fontFamily="@font/cocon_nextarabiclight_0"

                android:hint="@string/phone"

                android:inputType="phone"
                android:paddingBottom="20dp"
                android:singleLine="true"
                android:textAppearance="?android:textAppearanceMedium"


                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutEdtLoginEmail"

            style="@style/TextInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="30dp"

            android:layout_marginRight="30dp"

            android:layout_marginStart="30dp"

            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtLoginEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:fontFamily="@font/cocon_nextarabiclight_0"

                android:hint="@string/Email"
                android:inputType="textEmailAddress"


                android:paddingBottom="20dp"
                android:singleLine="true"
                android:textAppearance="?android:textAppearanceMedium"


                />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutEdtLoginPassword"

            style="@style/TextInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="30dp"

            android:layout_marginRight="30dp"

            android:layout_marginStart="30dp"
            app:passwordToggleEnabled="true"


            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtLoginPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@android:color/white"
                android:fontFamily="@font/cocon_nextarabiclight_0"
                android:hint="@string/Password"
                android:inputType="numberPassword"
                android:paddingBottom="20dip"
                android:singleLine="true"
                android:text="@string/Password"
                android:textAppearance="?android:textAppearanceMedium"


                />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@android:color/transparent"

            android:layout_marginStart="50dp"

            android:layout_marginTop="50dp"
            android:fontFamily="@font/cocon_nextarabiclight_0"
            android:gravity="center"
            android:text="@string/forgetPassword"
            android:textColor="@android:color/white" />


        <Button
            android:id="@+id/btn_Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/appbar_transparent_shape"
            android:gravity="center"
            android:paddingEnd="60dp"
            android:paddingStart="60dp"
            android:text="@string/login"
            android:textColor="#0B8ACD" />

        <Button
            android:id="@+id/btn_HomeEnterAsAVisitr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/cocon_nextarabiclight_0"
            android:gravity="center"

            android:text="@string/Enterasavisitor"
            android:textColor="@android:color/white" />


    </LinearLayout>


</FrameLayout>
