<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/forgetpassword_bg_hdpi"
    tools:context="com.example.visionstech.storkmart.Activity.ForgetPasswordActivity">

    <!--start of forgetPasswordContentContainer-->

    <RelativeLayout
        android:id="@+id/forgetPasswordContentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/white">


        <TextView
            android:id="@+id/tv_forgetPasswordTitle"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/cocon_nextarabiclight_0"
            android:gravity="bottom"
            android:text="@string/forgetPassword"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#373737" />

        <ImageView
            android:id="@+id/ic_forgetPasswordClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_circle_close_black" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/edt_forgetPassword_emailLayout"
            style="@style/TextInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_forgetPasswordTitle"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="30dp"

            android:layout_marginTop="20dp"


            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edt_forgetPassword_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                android:backgroundTint="@android:color/white"
                android:drawableEnd="@drawable/ic_file_mail_close"

                android:fontFamily="@font/cocon_nextarabiclight_0"
                android:hint="@string/Email"
                android:inputType="phone"
                android:paddingBottom="20dp"
                android:singleLine="true"
                android:textAppearance="?android:textAppearanceMedium"


                />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_forgetPassword_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/edt_forgetPassword_emailLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_forgetpassword_btn_hdpi"
            android:gravity="center"
            android:text="@string/forgetPassword"
            android:textColor="@android:color/white" />


        <TextView
            android:id="@+id/tv_forgetPasswordEmailMessageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_forgetPassword_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/cocon_nextarabiclight_0"
            android:gravity="center"
            android:text="@string/recieveEmailToChangePassword"

            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#373737" />

        <TextView
            android:id="@+id/tv_forgetPasswordContactUsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/edt_forgetPassword_emailLayout"
            android:layout_below="@+id/tv_forgetPasswordEmailMessageTitle"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="29dp"
            android:fontFamily="@font/cocon_nextarabiclight_0"
            android:gravity="bottom"
            android:text="@string/contactUsMessage"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="#373737" />


        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@+id/tv_forgetPasswordContactUsTitle"
            android:layout_centerHorizontal="true"

            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_file_bg_hdpi" />


    </RelativeLayout>
    <!--End of forgetPasswordContentContainer-->


</RelativeLayout>
